k8s/user-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app
  namespace: user-app
spec:
  selector:
    app: user-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
